--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,9 @@
-@media(max-width:1024px){
+@media(max-width: 1100px){
+    .map-div{
+        width: 85%;
+    }
+}
+@media(max-width: 1024px){
     .navigation{
         display: none;
     }
@@ -10,3 +15,4 @@
         margin-left: 25px;
     }
 }
+
