--- a/css/styles.css
+++ b/css/styles.css
@@ -64,3 +64,16 @@
     margin-top: 95px;
     margin-left: 140px;    
 }
+
+.map-div{
+    margin: 0 auto;
+    margin-top: 50px;
+    max-width: 1088px;
+    width: 100%;
+    height: 286px;
+}
+
+.map{
+    width: 100%;
+    height: 100%;
+}
