--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@
     justify-content: space-between;
     padding: 25px;
     font-family: 'Poppins';
-    background: rebeccapurple;
 }
 
 .nav-text{
@@ -76,4 +75,85 @@
 .map{
     width: 100%;
     height: 100%;
+}
+
+
+.input-box{
+    width: 352px;
+    height: 60px;
+    background: #F8F8F8;
+    margin-bottom: 16px;
+    border: green;
+} 
+.send-box{
+    max-width: 352px;
+    width: 100%;
+    height: 60px;
+    background: #5863F8;
+ } 
+
+.button{
+    max-width: 352px;
+    width: 100%;
+    height: 60px;
+    background: #5863F8;
+    font-size: 14px;
+    border: none;
+    color: white;
+} 
+
+.input-box::placeholder{
+    color: #CECECE;
+    font-size: 14px;
+    
+}
+
+.text-area{
+    background: #F8F8F8;
+    width: 720px;
+    height: 288px;
+    font-size: 14px;
+    color: #CECECE;
+}
+
+.text-area-div{
+    max-width: 720px;
+    width: 100%;
+    height: 288px;
+    margin-right: 10px;
+}
+
+.form-divs{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 1088px;
+    height: 288px;
+}
+
+.contact{
+    width: 1088px;
+    height: 465px;
+    margin: 0 auto;
+    margin-top: 56px;
+    background: yellow;
+}
+
+.h2{
+   font-size: 42px;
+   font-style: bolder;
+   width: 350px;
+   margin-bottom: 50px;
+   font-weight: bolder;
+}
+
+.h4{
+    color: #5863F8;
+    font-size: 14px;
+    font-weight: bolder;
+}
+
+.form-elements{
+    max-width: 1088px;
+    width: 100%;
 }
