--- a/css/responsive.css
+++ b/css/responsive.css
@@ -43,5 +43,32 @@
     .h2{
         width: 70%;
     }
+    .contact-icons{
+        flex-wrap: wrap;
+        width: 40%;
+        margin-left: 10%;
+        margin-top: 380px;   
+    }
+
+    .img-div{
+        flex-wrap: wrap;
+        width: 80%;
+    }
+
+    .see{
+        flex-wrap: wrap;
+        width: 85%;
+        margin-left: 30px;     
+    }
+    .photos{
+        margin-left: 30px;
+    }
+
+    /* .images{
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 85%;
+    } */
+
 }
 
