--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,6 @@
     height: 465px;
     margin: 0 auto;
     margin-top: 56px;
-    background: yellow;
 }
 
 .h2{
@@ -158,10 +157,14 @@
     width: 100%;
 }
 .icon{
+    margin: 0 auto;
     width: 60px;
     height: 60px;
     background: blue;
     border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .fa-envelope{
@@ -169,16 +172,100 @@
     margin: 35%;
 }
 
+.fa-phone{
+    color: white;
+    margin: 35%;
+}
+
+.fa-location-pin{
+    color: white;
+    margin: 35%; 
+}
+
+.fa-phone-office{
+    color: white;
+}
+
 .email-h2{
+    margin-top: 10px;
+    margin-bottom: 10px;
     font-size: 14px;
     font-weight: bolder;
     color: black;
 }
 .email-adress{
-    color: #B1B1B1;
+    color: #B1B1B1;    
 }
 
 .icons-div{
     width: 240px;
     height: 185px;
+    justify-content: column;
+    text-align: center;
+}
+
+.call-div{
+    width: 240px;
+    height: 185px;
+    justify-content: column;
+    text-align: center; 
+}
+
+.call{
+    margin: 0 auto;
+    width: 60px;
+    height: 60px;
+    /* background: blue; */
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-icons{
+    padding-top: 20px;
+    width: 1088px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+.text-div{
+    flex-wrap: wrap;
+    text-align: center;
+}
+.fa-paper-plane{
+    color: white;
+    background: blue;
+}
+.section2-text{
+    max-width: 565px;
+    width: 100%;
+    height: auto;
+    margin-left: 139px;
+}
+.photos{
+    font-size: 14px;
+    color: #5863F8;
+    font-weight: bolder;
+}
+.see{
+    font-size: 42px;
+    font-weight: bolder;
+    max-width: 520px;
+    width: 520px;
+}
+
+.img-div{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    max-width: 1366px;
+    width: 100%;
+    background: yellow;
+}
+.images{
+    max-width: 362px;   
+    width: 100%;
+    background: green;
 }
