--- a/css/responsive.css
+++ b/css/responsive.css
@@ -52,7 +52,8 @@
 
     .img-div{
         flex-wrap: wrap;
-        width: 80%;
+        width: 50%;
+        margin-left: 30px;
     }
 
     .see{
@@ -63,12 +64,10 @@
     .photos{
         margin-left: 30px;
     }
-
-    /* .images{
-        flex-wrap: wrap;
-        justify-content: center;
-        width: 85%;
-    } */
+   
+    .div-images{
+     width: 100%;
+    } 
 
 }
 
