--- a/css/styles.css
+++ b/css/styles.css
@@ -236,11 +236,10 @@
 }
 .fa-paper-plane{
     color: white;
-    background: blue;
+    margin-left: 5px;
 }
 .section2-text{
     max-width: 565px;
-    width: 100%;
     height: auto;
     margin-left: 139px;
 }
@@ -248,24 +247,139 @@
     font-size: 14px;
     color: #5863F8;
     font-weight: bolder;
+    margin-left: 139px;
 }
 .see{
     font-size: 42px;
     font-weight: bolder;
     max-width: 520px;
-    width: 520px;
+    width: 100%;
+    margin-left: 139px;
 }
 
 .img-div{
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     margin-top: 50px;
-    max-width: 1366px;
-    width: 100%;
-    background: yellow;
+    
 }
 .images{
-    max-width: 362px;   
+    max-width: 352px;
     width: 100%;
-    background: green;
+}
+
+.fb{
+    width: 35px;
+    height: 35px;
+    background: #3B5998;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.fa-facebook-f{
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.twitter{
+    width: 35px;
+    height: 35px;
+    background: #55ACEE;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.fa-twitter{
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.google{
+    width: 35px;
+    height: 35px;
+    background: #DC4E41;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.fa-google-plus-g{
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+
+.fb-tw-goog{
+    width: 145px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-div-1{
+    width: 260px;
+    height: 190px;
+}
+
+.zeta{
+    color: white;
+    font-size: 24px;
+    font-weight: bolder;
+    margin-bottom: 20px;
+}
+
+.our{
+    font-size: 14px;
+    font-weight: bold;
+    color: #B1B1B1;
+    margin-bottom: 20px;
+}
+
+.useful{
+    width: 95px;
+    height: 155px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;    
+}
+
+.useful-text{
+    color: #5863F8;
+    margin-top: 10px;
+}
+
+footer{
+    background: black;
+}
+
+.useful-h2{
+    color: white;
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+.footer-div{
+    width: 1057px;
+    height: 200px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    margin-top: 90px;
+}
+
+.marian{
+    color: #5863F8;
+}
+
+.Copyright{
+    color: white;
+}
+
+.web{
+    color: #5863F8;
 }
