--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+header{
+    font-family: 'Poppins';
+}
+
+.section-2{
+    font-family: 'Poppins'; 
+}
+
+
 .bg-img{
     background-image: url('../images/bg-img.png');
 }
@@ -136,6 +145,7 @@
     height: 465px;
     margin: 0 auto;
     margin-top: 56px;
+    font-family: 'Poppins' 
 }
 
 .h2{
@@ -228,10 +238,11 @@
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
+    font-family: 'Poppins';
 }
 
 .text-div{
-    flex-wrap: wrap;
+    
     text-align: center;
 }
 .fa-paper-plane{
@@ -248,6 +259,7 @@
     color: #5863F8;
     font-weight: bolder;
     margin-left: 139px;
+    font-family: 'Poppins';
 }
 .see{
     font-size: 42px;
@@ -255,6 +267,7 @@
     max-width: 520px;
     width: 100%;
     margin-left: 139px;
+    font-family: 'Poppins';
 }
 
 .img-div{
@@ -325,6 +338,7 @@
 .footer-div-1{
     width: 260px;
     height: 190px;
+    font-family: 'Poppins';
 }
 
 .zeta{
@@ -347,6 +361,7 @@
     text-align: left;
     display: flex;
     flex-direction: column;    
+    font-family: 'Poppins';
 }
 
 .useful-text{
@@ -402,6 +417,7 @@ footer{
     height: 145px;
     display: flex;
     flex-direction: column;
+    font-family: 'Poppins';
 }
 
 .fa-envelope{
