--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,15 +17,18 @@
     .contact{
         flex-wrap: nowrap;
         width: 85%;
+        justify-content: center; 
     }
     .form-elements{
         flex-wrap: wrap;
         width: 85%;
+        justify-content: center; 
     }
 
     .form-divs{
         width: 95%;
         flex-wrap: wrap;
+        justify-content: center; 
     }
 
     .text-area{
@@ -47,19 +50,22 @@
         flex-wrap: wrap;
         width: 40%;
         margin-left: 10%;
-        margin-top: 380px;   
+        margin-top: 400px;   
+        justify-content: center; 
     }
 
     .img-div{
         flex-wrap: wrap;
         width: 50%;
         margin-left: 30px;
+        justify-content: center; 
     }
 
     .see{
         flex-wrap: wrap;
         width: 85%;
-        margin-left: 30px;     
+        margin-left: 30px;
+        justify-content: center;      
     }
     .photos{
         margin-left: 30px;
@@ -88,6 +94,6 @@
         height: 1000px;
         background: black;
     }
-
+       
 }
 
